--- a/app/src/main/res/layout/activity_info_pessoais.xml
+++ b/app/src/main/res/layout/activity_info_pessoais.xml
@@ -3,47 +3,236 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".InfoPessoais">
 
-    <LinearLayout
+    <GridLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Nome:"
-            android:id="@+id/nomeLb" />
+            android:text="Nome/Código:"
+            android:id="@+id/nomeLb"
+            android:layout_row="0"
+            android:layout_column="0" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/nome" />
+            android:id="@+id/nome"
+            android:layout_row="1"
+            android:layout_column="0" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Idade:"
-            android:id="@+id/idadeLb" />
-
-        <EditText
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/idade" />
+            android:layout_height="110dp"
+            android:layout_row="2"
+            android:layout_column="0">
 
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/table">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Idade:"
+                    android:id="@+id/idadeLb"
+                    android:layout_row="3"
+                    android:layout_column="3" />
+
+                <EditText
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:ems="10"
+                    android:id="@+id/idade"
+                    android:layout_row="4"
+                    android:layout_column="4" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Altura:"
+                    android:layout_marginLeft="50dp"
+                    android:id="@+id/alturaLb"
+                    android:layout_row="7"
+                    android:layout_column="5" />
+
+                <EditText
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/altura"
+                    android:layout_row="7"
+                    android:layout_column="6" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/table2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Peso:"
+                    android:id="@+id/pesoLb"
+                    android:layout_row="5"
+                    android:layout_column="3" />
+
+                <EditText
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+
+                    android:id="@+id/peso"
+                    android:layout_row="6"
+                    android:layout_column="4" />
+
+
+            </TableRow>
+
+
+
+        </TableLayout>
+
+        <TableLayout>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_marginTop="15dp"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Sexo:"
+
+                    android:id="@+id/sexoLb"
+                    android:layout_row="5"
+                    android:layout_column="0" />
+
+                <Spinner
+                    android:id="@+id/sexo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"
+                    android:layout_row="3"
+                    android:layout_column="0" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_marginTop="15dp"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Etnia:"
+                    android:id="@+id/textView"
+                    android:layout_row="6"
+                    android:layout_marginTop="20dp"
+                    android:layout_column="0" />
+
+                <Spinner
+                    android:id="@+id/etnia"
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"
+                    android:layout_row="3"
+                    android:layout_column="0" />
+
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Duração (min):"
+
+                android:id="@+id/duracaoLb"
+                android:layout_row="5"
+                android:layout_column="3" />
+
+            <EditText
+                android:layout_width="62dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+
+                android:id="@+id/duracao"
+                android:layout_row="6"
+                android:layout_column="4" />
+
+
+        </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_marginTop="15dp"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Num. passos:"
+
+                    android:id="@+id/numpassosLb"
+                    android:layout_row="5"
+                    android:layout_column="3" />
+
+                <EditText
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:ems="10"
+
+                    android:id="@+id/numpassos"
+                    android:layout_row="6"
+                    android:layout_column="4" />
+
+
+            </TableRow>
+        </TableLayout>
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="132dp"
+            android:layout_height="64dp"
             android:text="Iniciar Teste"
             android:id="@+id/iniciar"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+            android:layout_gravity="center_horizontal"
+            android:layout_row="8"
+            android:layout_column="0" />
+
+
+
+    </GridLayout>
 </RelativeLayout>
