--- a/app/src/main/res/layout/activity_medicao.xml
+++ b/app/src/main/res/layout/activity_medicao.xml
@@ -1,48 +1,39 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:background="#000000"
-    android:layout_height="match_parent" >
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Medicao">
 
     <TextView
         android:id="@+id/timerValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/pauseButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="37dp"
         android:textSize="40sp"
-        android:textColor="#ffffff"
-        android:text="@string/timerVal" />
 
-    <Button
-        android:id="@+id/startButton"
-        android:layout_width="90dp"
-        android:layout_height="45dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="38dp"
-        android:text="@string/startButtonLabel" />
+        android:text="@string/timerVal"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp" />
 
     <Button
         android:id="@+id/pauseButton"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_alignBaseline="@+id/startButton"
-        android:layout_alignBottom="@+id/startButton"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="38dp"
-        android:text="@string/pauseButtonLabel" />
+        android:text="@string/pauseButtonLabel"
+        android:layout_alignTop="@+id/reiniciarButton"
+        android:layout_toLeftOf="@+id/reiniciarButton"
+        android:layout_toStartOf="@+id/reiniciarButton" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/enviarButtonLabel"
         android:id="@+id/enviarButton"
-        android:layout_marginTop="32dp"
-        android:layout_below="@+id/startButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/reiniciarButton"
+        android:layout_toEndOf="@+id/reiniciarButton" />
 
     <Button
         android:layout_width="wrap_content"
@@ -50,6 +41,17 @@
         android:text="@string/reiniciarButtonLabel"
         android:id="@+id/reiniciarButton"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/qtdPassos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="100dp"
+
+        android:text="0"
+        android:layout_marginTop="94dp"
+        android:layout_below="@+id/timerValue"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
