--- a/app/src/main/res/layout/activity_info_pessoais.xml
+++ b/app/src/main/res/layout/activity_info_pessoais.xml
@@ -32,55 +32,39 @@
             android:id="@+id/nome"
             android:layout_row="1"
             android:layout_column="0" />
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:layout_row="2"
-            android:layout_column="0">
-
+        <TableLayout>
             <TableRow
+                android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/table">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Idade:"
-                    android:id="@+id/idadeLb"
-                    android:layout_row="3"
-                    android:layout_column="3" />
-
                 <EditText
-                    android:layout_width="62dp"
+                    android:layout_width="162dp"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:ems="10"
+                    android:inputType="date"
                     android:id="@+id/idade"
                     android:layout_row="4"
                     android:layout_column="4" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Altura:"
-                    android:layout_marginLeft="50dp"
-                    android:id="@+id/alturaLb"
-                    android:layout_row="7"
-                    android:layout_column="5" />
-
-                <EditText
-                    android:layout_width="62dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/altura"
-                    android:layout_row="7"
-                    android:layout_column="6" />
             </TableRow>
+        </TableLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/dataPickerButton"
+            android:layout_row="2"
+            android:layout_column="0" />
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_row="3"
+            android:layout_marginTop="75dp"
+            android:layout_column="0">
+
+
 
             <TableRow
                 android:layout_width="match_parent"
@@ -101,10 +85,29 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
-
                     android:id="@+id/peso"
                     android:layout_row="6"
                     android:layout_column="4" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Altura:"
+                    android:layout_marginLeft="50dp"
+                    android:id="@+id/alturaLb"
+                    android:layout_row="7"
+                    android:layout_column="5" />
+
+                <EditText
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/altura"
+                    android:layout_row="7"
+                    android:layout_column="6" />
+
 
 
             </TableRow>
@@ -113,18 +116,18 @@
 
         </TableLayout>
 
-        <TableLayout>
+        <TableLayout
+            android:layout_row="4"
+            android:layout_column="0">
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_marginTop="15dp"
                 android:layout_height="match_parent">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Sexo:"
-
                     android:id="@+id/sexoLb"
                     android:layout_row="5"
                     android:layout_column="0" />
@@ -167,7 +170,9 @@
 
         </TableLayout>
 
-        <TableLayout>
+        <TableLayout
+            android:layout_row="5"
+            android:layout_column="0">
         <TableRow
             android:layout_width="match_parent"
             android:layout_marginTop="15dp"
@@ -229,7 +234,7 @@
             android:text="Iniciar Teste"
             android:id="@+id/iniciar"
             android:layout_gravity="center_horizontal"
-            android:layout_row="8"
+            android:layout_row="9"
             android:layout_column="0" />
 
 
