--- a/app/src/main/res/layout/activity_info_pessoais.xml
+++ b/app/src/main/res/layout/activity_info_pessoais.xml
@@ -3,7 +3,6 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".InfoPessoais">
 
     <GridLayout
@@ -39,29 +38,43 @@
                 android:layout_height="match_parent"
                 android:id="@+id/table">
 
-                <EditText
-                    android:layout_width="162dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="date"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Data Nasc:"
+                    android:id="@+id/datanasc"
+                    android:layout_row="0"
+                    android:layout_column="0" />
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="  /  /  "
+                    android:ems="5"
+                    android:gravity="center"
                     android:id="@+id/idade"
-                    android:layout_row="4"
-                    android:layout_column="4" />
+                    android:layout_row="0"
+                    android:layout_column="0" />
+
+                <ImageButton
+                    android:layout_marginLeft="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_datepicker"
+                    android:id="@+id/dataPickerButton"
+                    android:layout_column="7" />
 
             </TableRow>
         </TableLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/dataPickerButton"
-            android:layout_row="2"
-            android:layout_column="0" />
+
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_row="3"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="15dp"
             android:layout_column="0">
 
 
@@ -81,10 +94,11 @@
                     android:layout_column="3" />
 
                 <EditText
-                    android:layout_width="62dp"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
-                    android:ems="10"
+                    android:ems="3"
+                    android:gravity="center"
                     android:id="@+id/peso"
                     android:layout_row="6"
                     android:layout_column="4" />
@@ -93,21 +107,39 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="kg"
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/kg"
+                  />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Altura:"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginLeft="30dp"
                     android:id="@+id/alturaLb"
                     android:layout_row="7"
                     android:layout_column="5" />
 
                 <EditText
-                    android:layout_width="62dp"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
-                    android:ems="10"
+                    android:ems="3"
+                    android:gravity="center"
                     android:id="@+id/altura"
                     android:layout_row="7"
                     android:layout_column="6" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="m"
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/m"
+                    />
 
 
             </TableRow>
@@ -135,7 +167,7 @@
                 <Spinner
                     android:id="@+id/sexo"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
                     android:background="@android:drawable/btn_dropdown"
                     android:spinnerMode="dropdown"
                     android:layout_row="3"
@@ -154,13 +186,12 @@
                     android:text="Etnia:"
                     android:id="@+id/textView"
                     android:layout_row="6"
-                    android:layout_marginTop="20dp"
                     android:layout_column="0" />
 
                 <Spinner
                     android:id="@+id/etnia"
-                    android:layout_width="10dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
                     android:background="@android:drawable/btn_dropdown"
                     android:spinnerMode="dropdown"
                     android:layout_row="3"
@@ -182,21 +213,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Duração (min):"
+                android:text="Duração:"
 
                 android:id="@+id/duracaoLb"
                 android:layout_row="5"
                 android:layout_column="3" />
 
             <EditText
-                android:layout_width="62dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-
+                android:inputType="numberDecimal"
+                android:ems="3"
+                android:gravity="center"
                 android:id="@+id/duracao"
                 android:layout_row="6"
                 android:layout_column="4" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="minutos"
+                android:layout_marginLeft="5dp"
+                android:id="@+id/min"
+                />
 
 
         </TableRow>
@@ -209,21 +248,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Num. passos:"
+                    android:text="Passos:"
 
                     android:id="@+id/numpassosLb"
                     android:layout_row="5"
                     android:layout_column="3" />
 
                 <EditText
-                    android:layout_width="62dp"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:ems="10"
-
+                    android:inputType="numberDecimal"
+                    android:ems="2"
+                    android:gravity="center"
                     android:id="@+id/numpassos"
                     android:layout_row="6"
                     android:layout_column="4" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="(máximo)"
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/max"
+                    />
 
 
             </TableRow>
